k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: devops-intermidate
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
